# sandbox-office-library-system

./: .gitignore  CLAUDE.md  README.md
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
backend/app/: Cargo.toml
backend/app/src/: main.rs
backend/controller/book/: Cargo.toml
backend/controller/book/src/: borrow.rs  create.rs  find.rs  lib.rs  list.rs  return.rs
backend/controller/division/: Cargo.toml
backend/controller/division/src/: create.rs  lib.rs  list.rs
backend/controller/user/: Cargo.toml
backend/controller/user/src/: create.rs  lib.rs  list.rs
backend/controller/utils/: Cargo.toml
backend/controller/utils/src/: lib.rs
backend/db_domain/book/: Cargo.toml
backend/db_domain/book/src/: models.rs  schema.rs
backend/db_domain/division/: Cargo.toml
backend/db_domain/division/src/: models.rs  schema.rs
backend/db_domain/user/: Cargo.toml
backend/db_domain/user/src/: models.rs  schema.rs
backend/di_service/: Cargo.toml
backend/di_service/src/: feature_di.rs  lib.rs  usecase_di.rs
backend/domain/collection_object/book/: Cargo.toml
backend/domain/collection_object/book/src/: lib.rs
backend/domain/collection_object/division/: Cargo.toml
backend/domain/collection_object/division/src/: lib.rs
backend/domain/collection_object/user/: Cargo.toml
backend/domain/collection_object/user/src/: lib.rs
backend/domain/context/: Cargo.toml
backend/domain/context/src/: lib.rs
backend/domain/entity_object/book/: Cargo.toml
backend/domain/entity_object/book/src/: lib.rs
backend/domain/entity_object/division/: Cargo.toml
backend/domain/entity_object/division/src/: lib.rs
backend/domain/entity_object/user/: Cargo.toml
backend/domain/entity_object/user/src/: lib.rs
backend/domain/value_object/book/: Cargo.toml
backend/domain/value_object/book/src/: lib.rs
backend/domain/value_object/division/: Cargo.toml
backend/domain/value_object/division/src/: lib.rs
backend/domain/value_object/user/: Cargo.toml
backend/domain/value_object/user/src/: lib.rs
backend/feature/book/: Cargo.toml
backend/feature/book/src/: lib.rs
backend/feature/division/: Cargo.toml
backend/feature/division/src/: lib.rs
backend/feature/user/: Cargo.toml
backend/feature/user/src/: lib.rs
backend/migrations/2026-02-13-035111_create_tables/: down.sql  up.sql
backend/presenter/book/: Cargo.toml
backend/presenter/book/src/: lib.rs
backend/presenter/division/: Cargo.toml
backend/presenter/division/src/: lib.rs
backend/presenter/user/: Cargo.toml
backend/presenter/user/src/: lib.rs
backend/repository/book/: Cargo.toml
backend/repository/book/src/: lib.rs
backend/repository/division/: Cargo.toml
backend/repository/division/src/: lib.rs
backend/repository/user/: Cargo.toml
backend/repository/user/src/: lib.rs
backend/repository_impl/book/: Cargo.toml
backend/repository_impl/book/src/: lib.rs
backend/repository_impl/division/: Cargo.toml
backend/repository_impl/division/src/: lib.rs
backend/repository_impl/user/: Cargo.toml
backend/repository_impl/user/src/: lib.rs
backend/scripts/: README.md  generate-schemas.sh
backend/usecase/book/: Cargo.toml
backend/usecase/book/src/: lib.rs
backend/usecase/division/: Cargo.toml
backend/usecase/division/src/: lib.rs
backend/usecase/user/: Cargo.toml
backend/usecase/user/src/: lib.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: PageHeader.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Books.tsx  Divisions.tsx  Users.tsx
