[package]
name = "controller_book"
version = "0.1.0"
edition = "2021"

[dependencies]
usecase_book = { workspace = true }
entity_object_book = { workspace = true }
value_object_book = { workspace = true }
value_object_division = { workspace = true }
value_object_user = { workspace = true }
presenter_book = { workspace = true }
controller_utils = { workspace = true }
di_service = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
