[package]
name = "controller_division"
version = "0.1.0"
edition = "2021"

[dependencies]
usecase_division = { workspace = true }
entity_object_division = { workspace = true }
value_object_division = { workspace = true }
presenter_division = { workspace = true }
presenter_book = { workspace = true }
controller_utils = { workspace = true }
di_service = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
