[package]
name = "feature_user"
version = "0.1.0"
edition = "2021"

[dependencies]
repository_user = { workspace = true }
entity_object_user = { workspace = true }
collection_object_user = { workspace = true }
value_object_user = { workspace = true }
value_object_division = { workspace = true }
anyhow = { workspace = true }
