[package]
name = "repository_book"
version = "0.1.0"
edition = "2021"

[dependencies]
entity_object_book = { workspace = true }
collection_object_book = { workspace = true }
value_object_book = { workspace = true }
value_object_division = { workspace = true }
value_object_user = { workspace = true }
anyhow = { workspace = true }
