[package]
name = "repository_impl_division"
version = "0.1.0"
edition = "2021"

[dependencies]
repository_division = { workspace = true }
entity_object_division = { workspace = true }
value_object_division = { workspace = true }
db_domain_division = { workspace = true }
domain_context = { workspace = true }
diesel = { workspace = true }
anyhow = { workspace = true }
