[package]
name = "usecase_user"
version = "0.1.0"
edition = "2021"

[dependencies]
feature_user = { workspace = true }
entity_object_user = { workspace = true }
value_object_user = { workspace = true }
value_object_division = { workspace = true }
presenter_user = { workspace = true }
anyhow = { workspace = true }
